--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ nav_order: 5
 back_to_top: false
 back_to_top_text: "Back to top"
 
-footer_content: "(cc-by) 2008, 2017, 2022; для свободного распространения <a href=\"://github.com/ablaternae/torrent-manual/blob/trunk/LICENSE\">как народное достояние</a>"
+footer_content: "(cc-by) 2008, 2017, 2022; для свободного распространения <a href=\"https://github.com/ablaternae/torrent-manual/blob/trunk/LICENSE\">как народное достояние</a>"
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -119,7 +119,10 @@ ga_tracking: false
 ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
 
 plugins:
+  - jekyll-github-metadata
   - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
 
 kramdown:
   syntax_highlighter_opts:
